Fixing instances of bad URL to File conversion. Merge from 2.3.x
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@25927 e5c1c795-43da-0310-a71f-fac65c449510